kube/addrconvsvc-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: addrconvsvc
  namespace: default
spec:
  ports:
    - port: 86
      targetPort: 3000
  selector:
    service: addrconvsvc
  type: NodePort
