kube/addrconvsvc-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addrconvsvc-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - cashaddr.bitcoincash.org
    secretName: addrconvsvc-tls
  defaultBackend:
    service:
      name: addrconvsvc
      port:
        number: 86
  rules:
  - host: cashaddr.bitcoincash.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: addrconvsvc
            port:
              number: 86
